F-curve noise modifier on a bone: change selection when modifying value #39851

Closed
opened 2014-04-23 02:54:18 +02:00 by Paul MAILLARDET · 10 comments

System Information
Kubuntu 14.04 64bits, Intel i7, Nvidia GTX560

Blender Version
2.70a (f93bc76)

Short description of error
When modifying a value of a noise modifier, for an animation channel of a BONE in Graph Editor (F-curves), the modifier's panel disappear, as if you deselect the channel. This happen only if the affected animation channel is not in first position.

Exact steps for others to reproduce the error

  • load factory settings
  • delete default cube
  • add an armature > single bone
  • switch to Pose mode
  • insert a keyframe
  • go to Graph-editor, F-curve context
  • select the second (or later, but not the first) animation channel in the (left-hand) list
  • expand properties panel, and add a noise modifier

try to slide some value of the noise modifier. It disappear, and all the animation channels are selected.

Attached blend file:

**System Information** Kubuntu 14.04 64bits, Intel i7, Nvidia GTX560 **Blender Version** 2.70a (f93bc76) **Short description of error** When modifying a value of a **noise** modifier, for an animation channel of a BONE in Graph Editor (F-curves), the modifier's panel disappear, as if you deselect the channel. This happen only if the affected animation channel is **not** in first position. **Exact steps for others to reproduce the error** - load factory settings - delete default cube - add an armature > single bone - switch to Pose mode - insert a keyframe - go to Graph-editor, F-curve context - select the second (or later, but not the first) animation channel in the (left-hand) list - expand properties panel, and add a **noise modifier** # try to slide some value of the noise modifier. It disappear, and all the animation channels are selected. Attached blend file: - [blender_bug_f-curve_noise_modifier.blend](https://archive.blender.org/developer/F85691/blender_bug_f-curve_noise_modifier.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @PaulMAILLARDET

Added subscriber: @PaulMAILLARDET

Also note that on objects animation channel, it works well. It seems to only affects bones in pose mode.

Also note that on objects animation channel, it works well. It seems to only affects bones in pose mode.
Member

Added subscriber: @JoshuaLeung

Added subscriber: @JoshuaLeung
Member

Ack! Confirmed... What's going on here?!

Ack! Confirmed... What's going on here?!
Joshua Leung self-assigned this 2014-04-23 06:48:27 +02:00
Member

Aha... it seems to only happen when the dopesheet is also open when doing this. So the workaround for now is to simply keep the dopesheet closed if/when you're editing the curves (which I highly recommend in general anyway; not sure why all the workspace layouts out there keep trying to do this, but it's not such a great idea)

Aha... it seems to only happen when the dopesheet is also open when doing this. So the workaround for now is to simply keep the dopesheet closed if/when you're editing the curves (which I highly recommend in general anyway; not sure why all the workspace layouts out there keep trying to do this, but it's not such a great idea)

This issue was referenced by blender/blender-addons-contrib@1fabfc9ea2

This issue was referenced by blender/blender-addons-contrib@1fabfc9ea2c7b36f0827269fcf07d162a879a227

This issue was referenced by 1fabfc9ea2

This issue was referenced by 1fabfc9ea2c7b36f0827269fcf07d162a879a227
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 1fabfc9ea2.

Closed by commit 1fabfc9ea2.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39851
No description provided.